v0.0.3/19.11.2023 Hot Fix